syntax = "proto3";
option go_package="../pb;pb";

// The greeting service definition.
service Greeter {
    // Sends a greeting
    rpc SayHello (HelloRequest) returns (HelloReply) {}
    rpc SayHelloST (stream HelloRequest) returns (HelloReply) {}
    rpc SayHelloAgain (HelloRequest) returns (stream HelloReply) {}
    rpc SayHelloSSTT (stream HelloRequest) returns (stream HelloReply) {}
}

// The request message containing the user's name.
message HelloRequest {
    string name = 1;
}

// The response message containing the greetings
message HelloReply {
    string message = 1;
}